perf(order): fetch profile and catalog concurrently
createOrder/getOrder called profile then catalog sequentially even
though both are independent outbound HTTP reads - a missed fan-out
opportunity flagged in the prior production-readiness review.

- New fetchProfileAndProducts() runs getProfile()/getProducts() on a
  virtual-thread-per-task executor via CompletableFuture, joining
  both. StructuredTaskScope (the documented house pattern for this)
  is still a preview API on this project's JDK 25.0.3 build and would
  need --enable-preview project-wide, which is a much bigger decision
  than this change - using CompletableFuture + virtual threads instead
  gets the same concurrency benefit on a stable API. Each dependency
  keeps its own circuit breaker; only the caller changed.
- Deliberate JPA constraint: never fork a call that touches
  orderDao/the persistence context this way - getOrder() is
  @Transactional(readOnly = true) and Hibernate's session is bound to
  the calling thread, not visible to a task on another one. Only pure
  outbound HTTP is forked.
- Scope: ChargeServiceImpl's payment calls are untouched -
  chargeCustomer has a real data dependency on the prior call's
  customerId, so they cannot be parallelized.
- Behavioral change: createOrder() no longer short-circuits catalog
  when the profile turns out invalid - both calls now always fire
  concurrently, so an invalid-profile order attempt costs one extra
  outbound call + circuit-breaker invocation it didn't before.

Test changes (OrderServiceImplTest): MockRestServiceServer now uses
ignoreExpectOrder(true) since concurrent calls can hit the mock server
in either order; should_throwConflict_when_noProfileRegistered gained
a stubCatalog() since catalog is now called unconditionally.

Verified: order clean verify green; OrderServiceImplTest run 20x
in a row with no flakiness.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>